# ee541-summoner-spell-tracker

./: .gitignore  .python-version  README.md  pyproject.toml
data/resources/: champions.csv  spells.csv
explore/: tree.txt
report/: references.bib  report.typ  template.typ
src/: create_dataset_from_video.py  generate_data.py  model.py  prepare_dataset.py  train.py  utils.py
src/from_video/: extract_frames.py  ocr_tesseract.py
